--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-flow"],
+  "presets": ["@babel/preset-env", "@babel/preset-flow", "@babel/preset-react"],
   "plugins": [
     ["@babel/plugin-transform-for-of", { "assumeArray": true }],
     [
