--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
     "eslint": "5.9.0",
@@ -84,6 +85,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.0",
     "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.89.0",
     "husky": "^1.1.3",
