--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "base-x": "^1.0.4",
     "biggystring": "^3.0.2",
     "currency-codes": "^1.1.2",
-    "detect-bundler": "^1.0.0",
     "disklet": "^0.3.1",
     "elliptic": "^6.4.0",
     "ethereumjs-tx": "^1.3.7",
@@ -78,6 +77,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "eslint": "5.9.0",
     "eslint-config-standard": "^12.0.0",
@@ -101,7 +101,6 @@
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-flow-entry": "^0.2.2",
     "rollup-plugin-multi-entry": "^2.1.0",
-    "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.9",
     "updot": "^1.1.7",
     "webpack": "^3.5.3"
@@ -133,5 +132,5 @@
       ]
     }
   },
-  "react-native": "lib/edge-core-index-rn.js"
+  "react-native": "lib/react-native/edge-core-client.js"
 }
