--- a/package.json
+++ b/package.json
@@ -106,8 +106,7 @@
   },
   "peerDependencies": {
     "react-native-fast-crypto": "^1.5.3",
-    "react-native-randombytes": "git://github.com/Airbitz/react-native-randombytes.git#40d02a5f922",
-    "react-native-tcp": "git://github.com/Airbitz/react-native-tcp.git"
+    "react-native-randombytes": "git://github.com/Airbitz/react-native-randombytes.git#40d02a5f922"
   },
   "husky": {
     "hooks": {
