--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "README.md",
     "src/*"
   ],
-  "main": "lib/edge-core-index.cjs.js",
-  "module": "lib/edge-core-index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && rollup -c && webpack",
     "build:test": "rollup -c test/rollup.config.js",
@@ -53,7 +52,6 @@
     "base-x": "^1.0.4",
     "biggystring": "^3.0.2",
     "currency-codes": "^1.1.2",
-    "detect-bundler": "^1.0.0",
     "disklet": "^0.3.1",
     "elliptic": "^6.4.0",
     "ethereumjs-tx": "^1.3.7",
@@ -95,9 +93,8 @@
     "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.2",
     "rollup": "1.0.0",
-    "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-flow-entry": "^0.2.2",
+    "rollup-plugin-flow-entry": "^0.3.0",
     "rollup-plugin-multi-entry": "^2.1.0",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.9",
